--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-repos-template",
+  "name": "{{name}}",
   "version": "1.0.0",
-  "description": "A react project template...",
+  "description": "{{ description }}",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/shanejixx/react-repos-template.git"
   },
-  "author": "shanejixx",
+  "author": "{{ author }}",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/shanejixx/react-repos-template/issues"
